# berkai

./: .gitignore  README.md  before_live.json  demo.sh  demo_offline.sh  demo_story.sh  demo_support_story.sh  guardrails.patched.fixture.yml  guardrails.support.patched.fixture.yml  guardrails.support.unsafe.yml  guardrails.unsafe.yml  http_before.json  pyproject.toml  redteamci.yml
.github/workflows/: redteamci.yml
attacks/: custom_release_gates.json  redteamci_attacks.json
demo_project/: .env  README.md
examples/: redteamci.custom.yml  redteamci.http.yml  redteamci.level2.yml  redteamci.support.yml  redteamci.support_level2.yml  support_agent.py  support_agent_level2.py
examples/http_agent/: app.py
examples/uploaded_agents/: README.md  blackbox_chat_agent.redteamci.yaml  email_leaky_agent.py  email_leaky_agent.redteamci.yaml  (+6 more)
fixtures/: claude_pi003_patch.json  claude_support_story_patch.json
redteamci/: __init__.py  adapters.py  agent.py  assertions.py  attacks.py  claude_code.py  cli.py  config.py  dashboard.py  discovery.py  generator.py  github_actions.py  github_annotations.py  github_summary.py  integrations.py  patcher.py  paths.py  policy.py  profile.py  recorder.py  redaction.py  report.py  runner.py  story.py  summary.py  templates.py  tools.py  trace_viewer.py  uploads.py
tests/: test_assertions.py  test_cli_adapter.py  test_dashboard_helpers.py  test_generated_remediation.py  test_github_actions.py  test_profile_generation.py  test_redteamci.py  test_sentry_api.py  test_support_story.py  test_uploaded_agents.py
web/: pricing.html
(+4 files in other folders)
